--- a/package.json
+++ b/package.json
@@ -44,11 +44,12 @@
     "build"
   ],
   "devDependencies": {
-    "@babel/core": "^7.9.0",
-    "@babel/preset-react": "^7.9.4",
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
+    "@babel/preset-react": "^7.24.7",
     "express": "^4.17.1",
     "html2json": "^1.0.2",
-    "less": "^3.11.1",
+    "less": "^3.13.1",
     "pico-check": "^1.3.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
